--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,16 @@
 Package: HTT
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: Data, scripts, and functions of the High-Throughput Truthing project
+Version: 1.0
+Author: Brandon D. Gallas
+Maintainer: <brandon.gallas@fda.hhs.gov>
+Description: This package contains data collected for the High-Throughput
+    Truthing project (HTT). There are also functions and scripts replicating
+    analyses done for different presentations and publications (in the "inst"
+    directory).
+Imports: iMRMC, stats
+Depends: R (>= 2.10)
+License: CC0
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.1.1
